# od3d-basic

./: .gitignore  pyproject.toml
src/configs/dataset/: hc3d_object.yaml  hc3d_object_pair.yaml  housecorr3d_object_pair.yaml
src/configs/platform/: default.yaml  scratch.yaml  slurm.yaml  slurm_lmbl40.yaml  ssh-config-template
src/configs/platform/credentials/: default.yaml
src/configs/platform/credentials/custom/: default_custom_template.yaml
src/configs/platform/custom/: default_custom_template.yaml  slurm_custom_template.yaml  slurm_local_custom_template.yaml
src/od3d_basic/: cli.py  io.py
src/od3d_basic/cv/: io.py
src/od3d_basic/cv/geometry/: _mesh.py  points_alignment.py  primitives.py  transform.py
src/od3d_basic/cv/geometry/fit/: axis3d_from_pxl2d.py  axis_tform_from_pts3d.py  cuboid.py  depth_from_mesh_and_box.py  (+5 more)
src/od3d_basic/cv/label/: axis.py  keypoints.py
src/od3d_basic/cv/metric/: cross_entropy_smooth.py  pose.py  pt3d_so3.py
src/od3d_basic/cv/optimization/: gradient_descent.py  ransac.py
src/od3d_basic/cv/reconstruction/: clean.py  droid_slam.py
src/od3d_basic/cv/render/: gaussian_splats.py  gaussians_splats_v2.py
src/od3d_basic/cv/transforms/: transform.py
src/od3d_basic/cv/visual/: crop.py  draw.py  show.py  show3d.py  video.py  viz.py
src/od3d_basic/data/: __init__.py  axis.py  modalities.py  viz.py
src/od3d_basic/data/datatypes/: __init__.py  frame.py  frame_object.py  frame_objects.py  frames.py  mesh.py  object.py  objects.py  scene.py  scene_object.py  scene_objects.py
src/od3d_basic/dataset/: cli.py  dataset.py
(+41 files in other folders)
